# flit_core

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_add_is_deleted_version_columns.py  001_add_plan_subscriptions_drop_payment_plan_data.py  001_add_user_color_scheme.py  69bb1a9e4bac_create_user_table.py  93ebfbc6fe4c_.py  9502b031fb6a_make_app_slug_nullable_in_connection_.py  add_access_codes_and_grants.py  add_feedbacks_table.py  add_notesearch_table.py  add_oauth_and_connected_app.py  add_plan_subscription_product_id.py  add_subscriptions_table.py  add_superusers_table.py  add_user_boolean_columns.py  add_user_encryption_keys_and_encryption_version.py  add_user_id_to_categories.py  add_user_payment_plan_data.py  connection_code_and_connected_app_refactor.py  rename_feedback_metadata_to_context.py
docs/: PASSWORD_RESET_FRONTEND.md
scripts/: grant_superuser.py  purge_soft_deleted.py
src/: config.py  logging_config.py  main.py  turnstile.py
src/auth/: dependencies.py  jwt.py  password.py  password_reset_token.py  verify_token.py
src/crypto/: __init__.py  aead.py
src/database/: engine.py  session.py
src/exceptions/: __init__.py
src/middleware/: logging.py
src/models/: __init__.py  access_code.py  base.py  category.py  chunk.py  connected_app.py  connection_code.py  feedback.py  note.py  note_category.py  user.py  (+8 more)
tests/: conftest.py  scratch_create_note.py  test_access_code.py  test_auth.py  test_billing_routes.py  test_billing_service.py  test_config.py  test_connect.py  test_connected_app_routes.py  test_crypto_aead.py  test_email_service.py  test_encryption_integration.py  test_encryption_service.py  test_feedback_routes.py  test_note_routes.py  test_oauth.py  test_password_reset_routes.py  test_purge.py  test_subscription.py  test_sync.py  test_user_routes.py  test_user_superuser.py  test_verify_routes.py
webapp_build/: index.html
(+526 files in other folders)
